kubernetes/monitoring/monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-prometheus
  namespace: monitoring
  annotations:
    cloud.google.com/backend-config: '{"default": "admin-whitelist"}'
spec:
  selector:
    app: prometheus
  ports:
    - name: http
      port: 80
      targetPort: 9090
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-alertmanager
  namespace: monitoring
  annotations:
    cloud.google.com/backend-config: '{"default": "admin-whitelist"}'
spec:
  selector:
    app: alertmanager
  ports:
    - name: http
      port: 80
      targetPort: 9093
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
    networking.gke.io/managed-certificates: monitoring-ssl-certificate
spec:
  rules:
    - host: grafana.monitoring.ctf.maplebacon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: kibana.monitoring.ctf.maplebacon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-kibana
                port:
                  number: 5601
    - host: prometheus.monitoring.ctf.maplebacon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-prometheus
                port:
                  number: 80
    - host: alertmanager.monitoring.ctf.maplebacon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-alertmanager
                port:
                  number: 80
